--- a/index-jp.html
+++ b/index-jp.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 
-     <title>EC Kizuna</title>
+     <title>EC キズナ</title>
 <!-- 
 
 EC Kizuna Offcial Website
@@ -11,10 +11,17 @@ Last updated - 2020/10/24
 -->
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="Our service can help oversea companies to overcome challenges, to have a smooth and fast start in Japan EC market.">
+     <meta name="description" content="私たちのサービスは、海外企業が課題を克服し、日本のEC市場でスムーズかつ迅速にスタートするのに役立ちます。">
      <meta name="keywords" content="EC Kizuna">
      <meta name="author" content="">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+     
+     <meta property="og:url" content=""/>
+     <meta property="og:locale" content="ja_jp" />
+     <meta property="og:title" content="EC Kizuna"/>
+     <meta property="og:description" content="私たちのサービスは、海外企業が課題を克服し、日本のEC市場でスムーズかつ迅速にスタートするのに役立ちます。"/>
+     <meta property="og:type" content="website"/>
+     <meta property="og:image" content="https://raw.githubusercontent.com/yomoon/kizuna/gh-pages/images/kizuna_og_img_k.jpg"/>
      
      <link rel="shortcut icon" href="images/favicon.ico" />
 
