--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@ Last updated - 2020/10/24
      <meta name="author" content="">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
      
+     <meta property="og:url" content=""/>
+     <meta property="og:locale" content="en_us" />
+     <meta property="og:title" content="EC Kizuna"/>
+     <meta property="og:description" content="Our service can help oversea companies to overcome challenges, to have a smooth and fast start in Japan EC market."/>
+     <meta property="og:type" content="website"/>
+     <meta property="og:image" content="https://raw.githubusercontent.com/yomoon/kizuna/gh-pages/images/kizuna_og_img_k.jpg"/>
+     
      <link rel="shortcut icon" href="images/favicon.ico" />
 
      <link rel="stylesheet" href="css/bootstrap.min.css">
