--- a/index-jp.html
+++ b/index-jp.html
@@ -298,6 +298,17 @@ Created - 2020/10/24
                </div>
           </div>
      </section>
+     
+     <section class="logoplace">
+       <div class="container">
+         <div class="row">
+           <div class="col-md-3 col-sm-6"><img src="images/logo1.jpg" class="img-responsive center-block"></div>
+           <div class="col-md-3 col-sm-6"><img src="images/logo2.jpg" class="img-responsive center-block"></div>
+           <div class="col-md-3 col-sm-6"><img src="images/logo3.jpg" class="img-responsive center-block"></div>
+           <div class="col-md-3 col-sm-6"><img src="images/logo4.jpg" class="img-responsive center-block"></div>
+         </div>
+       </div>
+     </section>
 
 
      <!-- INSTANCE -->
